--- a/SistemaInventario/Views/Home/Index.cshtml
+++ b/SistemaInventario/Views/Home/Index.cshtml
@@ -4,12 +4,12 @@
 <link href="~/Content/Diseños/index.css" rel="stylesheet" />
 
 @if (TempData["Message"] != null)
-{
-    <div class="alert alert-success alert-dismissable col-md-4 text-center" role="alert" style="margin-top: 10px; width: 35rem;">
+{     <center>
+    <div class="alert alert-success alert-dismissable col-md-4 text-center" role="alert" style="margin-top: 10px; width: 35rem; color: black">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <b>@TempData["Message"]</b>
     </div>
-
+</center>
 }
 
 <div class="Contenedor">
