--- a/SistemaInventario/Content/Diseños/Table.css
+++ b/SistemaInventario/Content/Diseños/Table.css
@@ -46,4 +46,34 @@ table thead {
 .agregarBtn:hover {
     background-color: #5bbe6f;
 }
+h2 {
+    color: red;
+    text-align: center;
+    font-size: 36px;
+}
+/*
+    ::::::::::::::::ROTAR ICONOS:::::::::::::::::::::::::
+*/
+.cajaCompra {
+    animation: mymove 5s infinite; 
+}
 
+@keyframes mymove {
+    50% {
+        transform: rotate(-170deg);
+    }
+}
+
+.car {
+    margin-left: -350px;
+    margin-top: 40px;
+    animation: moveCar 5s infinite;
+}
+
+@keyframes moveCar{
+    100% {
+        margin-top: 10px;
+        margin-left: 350px;
+        color: transparent;
+    }
+}
