--- a/SistemaInventario/Views/Reportes/DetalleComprasProveedor.cshtml
+++ b/SistemaInventario/Views/Reportes/DetalleComprasProveedor.cshtml
@@ -1,65 +1,56 @@
 ﻿@using DAL.Models
-
-@model List<tabDetalleVentas>
+@model List<tabDetalleCompras>
 @{
-    ViewBag.Title = "MostrarProductos";
-    var ventas = ViewBag.MisCompras;
-    int idCliente = ViewBag.IdCliente;
+    var Compras = ViewBag.Compras;
     Layout = null;
 }
 
 <!DOCTYPE html>
+
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>ImprimirDetalleCompras</title>
+    <title>DetalleCompras</title>
     <link href="~/Content/Diseños/Table.css" rel="stylesheet" />
 </head>
 <body>
+
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-
-
                 @if (Model.Count() > 0)
                 {
                     <center>
+                        <h1>Compras</h1>
                         <br />
-                        <h1>Mis compras</h1>
-                    </center>
-                    <br />
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>N° FACTURA</th>
-                                <th>CLIENTE</th>
-                                <th>FECHA</th>
-                                <th>TOTAL</th>
-                                <th>DETALLE COMPRA</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var ven in ventas)
-                            {
-                                if (ven.FkCliente == idCliente)
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>fECHA</th>
+                                    <th>TOTAL</th>
+                                    <th>DETALLE COMPRAS</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+
+                                @foreach (var com in Compras)
                                 {
                                     <tr>
-                                        <td>@ven.IdVenta</td>
-                                        <td>
-                                            @if (ViewBag.NombreCliente != null)
-                                            {@ViewBag.NombreCliente}
-                                        </td>
-                                        <td> @ven.Fecha</td>
-                                        <td> $ @ven.Total</td>
+
+
+                                        <td> @com.Fecha</td>
+                                        <td> $ @com.Total</td>
 
                                         <td>
-                                            <table style="margin-top:1px">
+                                            <table style="margin-top:1px;">
                                                 <thead>
                                                     <tr>
+
                                                         <th>Marca y Modelo </th>
                                                         <th>Cantidad </th>
-                                                        <th>Precio Venta</th>
+                                                        <th>Precio Compra</th>
                                                         <th>SubTotal</th>
+
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -67,13 +58,16 @@
                                                     {
                                                         foreach (var prod in Model)
                                                         {
-                                                            if (prod.idVenta == ven.IdVenta)
+                                                            if (prod.idCompra == com.IdCompra)
                                                             {
                                                                 <tr>
+
                                                                     <td>@prod.marcaModelo</td>
                                                                     <td>@prod.cantidad</td>
-                                                                    <td>@prod.precio</td>
+                                                                    <td>@prod.precioCompra</td>
                                                                     <td>@prod.subTotal</td>
+
+
                                                                 </tr>
                                                             }
                                                         }
@@ -87,19 +81,12 @@
 
 
                                 }
-
-                            }
-
-                        </tbody>
-                    </table>
-
-
+                            </tbody>
+                        </table>
+                    </center>
                 }
-
-
             </div>
         </div>
     </div>
-
 </body>
 </html>
