Validaciones respecto a editar o registrar

--- a/SistemaInventario/Views/Clientes/AgregarOEditarClientes.cshtml
+++ b/SistemaInventario/Views/Clientes/AgregarOEditarClientes.cshtml
@@ -18,7 +18,7 @@
     {
         <h3>Agregar cliente</h3>
     }
-    @Html.Partial("_ParcialFormularioRegistrarse")+
+    @Html.Partial("_ParcialFormularioRegistrarse")
 
 </div>
 }
