--- a/SistemaInventario/Views/Marcas/AgregarOEditarMarcas.cshtml
+++ b/SistemaInventario/Views/Marcas/AgregarOEditarMarcas.cshtml
@@ -21,6 +21,15 @@
     <label>Nombre Marca</label>
     @Html.TextBoxFor(x => x.marca, htmlAttributes: new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.marca, null, htmlAttributes: new { @class = "text-danger" })
-    <input type="submit" value="Guardar" />
+    @if (Model.idMarca > 0)
+    {
+
+
+        <input type="submit" value="Guardar" />
+    }
+    else
+    {
+        <input type="submit" value="Registrar" />
+    }
 </div>
             }
