--- a/SistemaInventario/Views/Proveedores/EditOrAddProveedores.cshtml
+++ b/SistemaInventario/Views/Proveedores/EditOrAddProveedores.cshtml
@@ -28,6 +28,14 @@
     @Html.TextBoxFor(x => x.direccion, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.direccion, null, new { @class = "text-danger" })
 
-    <input type="submit" value="Registrar" />
+
+    @if (Model.idProveedor > 0)
+    {
+        <input type="submit" value="Guardar" />
+    }
+    else
+    {
+        <input type="submit" value="Registrar" />
+    }
 </div>
             }
