--- a/SistemaInventario/Views/Usuarios/EditarOCrearUsuarios.cshtml
+++ b/SistemaInventario/Views/Usuarios/EditarOCrearUsuarios.cshtml
@@ -42,7 +42,15 @@
     <label>Rol: </label>
     @Html.EnumDropDownListFor(x => x.rol, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.rol, null, new { @class = "text-danger" })
-    <input type="submit" value="Registrar" />
+    @if (Model.idUsuario > 0)
+    {
+        <input type="submit" value="Guardar"/>
+    }
+    else
+    {
+        <input type="submit" value="Registrar" />
+
+    }
 </div>
 }
 
